@@ -15,3 +15,6 @@ Version: V0.5B2 Date: Sun Jan 15 20:09:22 2006 +++++++++++++++++++++++++++++++
 Version: V0.5B3 Date: Mon Jan 30 13:54:25 2006 +++++++++++++++++++++++++++++++
 + use the zipios++ library for reading from/writing into compressed archives
 + update zipios++ sources to current CVS version
++ mesh creation with less memory usag (patch from bgrupp)
++ a fast algorithm to count edges (2 manifold) without additional memory (patch from bgrupp)
++ resolve problems for running macros from file with Microsoft Visual Studio 8.0 (patch from bgrupp)
